<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnTest"
        android:text="@string/btnTestTxt"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnTest2"
        android:text="@string/btnTest2Txt"
        android:layout_below="@+id/btnTest"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnTest3"
        android:text="@string/btnTest3Txt"
        android:layout_below="@+id/btnTest2"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnTest4"
        android:text="@string/btnTest4Txt"
        android:layout_below="@+id/btnTest3"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnTest5"
        android:text="@string/btnTest5Txt"
        android:layout_below="@+id/btnTest4"
        android:layout_centerHorizontal="true"
        android:onClick="myClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>